sample/error/e02609-ii.asn
E02609-II DEFINITIONS ::=
BEGIN
    set SET {           -- E02609-II
        item INTEGER
    } ::= {
        item  100,
        item2 200  
    }
END
